--- a/directors-report.yaml
+++ b/directors-report.yaml
@@ -19,22 +19,24 @@ elements:
     - tag: div
       content:
       - tag: p
-        content: 'The directors present their annual report and financial
-          statements for the year ended 31 March 2020.'
+        content: 'expand:note:The directors present their annual report and
+          financial statements for the year ended ~[period-end].'
       - tag: h3
         content: Principal activities
       - tag: p
-        content: 'The principal activities of the company continued to be...'
+        content: 'expand:note:~{description-of-principal-activities=
+          The principal activities of the company continued to be...}'
       - tag: h3
         content: Directors
       - tag: p
-        content: 'The directors who held offce during the year and up to
-          the date of signature of the financial statements were as
-          follows...'
+        content: 'expand:note:
+          The directors who held offce during the year and up to
+          the date of signature of the financial statements were
+          ~[officer1], ~[officer2] and ~[officer3].'
       - tag: h3
         content: Results and dividends
       - tag: p
-        content: 'The profit the year, after taxation, was ...
+        content: 'The profit the year, after taxation, was...
           The directors have not recommended the payment of a dividend.'
       - tag: h3
         content: Auditor
@@ -44,7 +46,8 @@ elements:
       - tag: h3
         content: Statement of disclosure to auditor
       - tag: p
-        content: "So far as each person who was a director at the date of
+        content: "expand:note:~{statement-on-information-provided-auditors=
+          So far as each person who was a director at the date of
           approving this report is aware, there is no relevant audit
           information of which the company's auditor is unaware.
           Additionally, the directors individually have taken all the
@@ -54,6 +57,6 @@ elements:
       - tag: p
         content: On behalf of the board
       - tag: p
-        content: [ "A Bloggs", { tag: br }, "Director" ]
+        content: [ "expand:note:~[officer1]", { tag: br }, "Director" ]
       - tag: p
-        content: 19 March 2021
+        content: expand:note:~[directors-report-date]
