Added support for piecash (#5)
Added accounts 'kind' parameter which can be gnucash or piecash. This dictates whether the gnucash or piecash library is used to handle accounts.

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,9 @@
 #############################################################################
 accounts:
   # Filename of GnuCash accounts
+#  kind: gnucash
+#  file: example.gnucash
+  kind: piecash
   file: example2.gnucash
 
 report: //import config/ch/unaudited-micro.yaml
