--- a/config/ch/unaudited-abridged.yaml
+++ b/config/ch/unaudited-abridged.yaml
@@ -9,6 +9,24 @@ taxonomy: //import taxonomy/frs102.yaml
 # CSS style
 style: //import config/style.yaml
 
+# The accounting-standards applied.  One of:
+#   frs101, frs102, frsse, full-irs, micro-entities, other-standards,
+#   small-entities-regime.
+accounting-standards: small-entities-regime
+
+# Accounts status, one of:
+#   audit-exempt-no-accountants-report,
+#   audit-exempt-with-accountants-report, audited,
+#   independent-examination, other-reporting-regime
+accounts-status: audit-exempt-with-accountants-report
+
+# Accounts type, one of:
+#   abbreviated-accounts, abridged-accounts, full-accounts
+accounts-type: abridged-accounts
+
+# Report title
+title: Unaudited Abridged Accounts
+
 #############################################################################
 ### Report computations #####################################################
 #############################################################################
@@ -636,7 +654,7 @@ elements:
         content: 'expand:note:~[company-name]'
       - tag: div
         attributes: { class: title }
-        content: Unaudited Abridged Financial Statements
+        content: expand:note:~[report-title]
       - tag: div
         attributes: { class: subtitle }
         content: 'expand:note:For the year ended ~[period-end]'
