Added full report

--- a/config/ch/audited-full.yaml
+++ b/config/ch/audited-full.yaml
@@ -599,13 +599,13 @@ elements:
 - id: report
   kind: composite
   elements:
-#  - title
-#  - consent
-#  - company-info
-#  - directors-report
-#  - auditors-report
-#  - balance-sheet
-#  - comprehensive-income
+  - title
+  - consent
+  - company-info
+  - directors-report
+  - auditors-report
+  - balance-sheet
+  - comprehensive-income
   - notes
 
 # Financial position page
