--- a/config/ch/audited-full.yaml
+++ b/config/ch/audited-full.yaml
@@ -202,15 +202,15 @@ computations:
   - staff-costs
   - other-charges
 
-- id: financial-income
+- id: interest-income
   kind: group
-  description: Interest received
+  description: Interest income
   period: in-year
   inputs: []
 
-- id: financial-costs
+- id: interest-expense
   kind: group
-  description: Interest payable
+  description: Interest expense
   period: in-year
   inputs: []
 
@@ -484,25 +484,18 @@ computations:
 ##############################
 
 # Ordinary shares held at start of period
-- id: ordinary-shares-at-start
+- id: shares-at-start
   kind: line
-  description: Ordinary Shares
+  description: Ordinary Shares held at start
   period: at-start
   accounts:
   - Equity:Shareholdings:Ordinary Shares
-
-# Preference shares held at start
-- id: preference-shares-at-start
-  kind: line
-  description: Preference Shares
-  period: at-start
-  accounts:
   - Equity:Shareholdings:Preference Shares
 
 # Shares issued
 - id: shares-issued
   kind: line
-  description: Shares Issued
+  description: Shares Issued in period
   period: in-year
   accounts:
   - Equity:Shareholdings
@@ -513,8 +506,7 @@ computations:
   description: Share Capital
   period: at-end
   inputs:
-  - ordinary-shares-at-start
-  - preference-shares-at-start
+  - shares-at-start
   - shares-issued
 
 #############################################################################
@@ -572,13 +564,13 @@ worksheets:
   kind: multi-period
   description: Financial income
   computations:
-  - financial-income
+  - interest-income
 
 - id: financial-costs
   kind: multi-period
   description: Financial income
   computations:
-  - financial-costs
+  - interest-expense
 
 - id: zero
   kind: multi-period
